--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.0",
+    "@angular/animations": "^12.2.16",
     "@angular/cdk": "^12.2.3",
     "@angular/cli": "~12.2.3",
     "@angular/common": "~12.2.0",
@@ -26,6 +26,8 @@
     "@angular/router": "~12.2.0",
     "express": "^4.17.1",
     "firebase": "^9.0.1",
+    "moment": "^2.29.3",
+    "ngx-toastr": "^14.3.0",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
